--- a/src/views/layouts/home.hbs
+++ b/src/views/layouts/home.hbs
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 style="text-align: center;">Welcome to hello's <br />Events application.</h1>
+            <h1 style="text-align: center;">Welcome to shiva's team <br />Events application.</h1>
         </div>
     </div>
     <div class="row">
